// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  helpText: 'My help text use pattern {pattern} for date: {date}. {defaultHelpText}'
}: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          My help text use pattern
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          for date: 12/24/2023. Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message'
}: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date mg-c-input--label-on-top mg-c-input--readonly">
      <div class="mg-c-input__title">
        <mg-input-title identifier="identifier" readonly="">
          label
        </mg-input-title>
      </div>
      <div class="mg-c-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: '2022-06-02'
}: 1`] = `
<mg-input-date value="2022-06-02">
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mg-input-title identifier="identifier" readonly="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <strong>
          6/2/2022
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: '2022-06-02',
  lang: 'fr'
}: 1`] = `
<mg-input-date lang="fr" value="2022-06-02">
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mg-input-title identifier="identifier" readonly="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <strong>
          02/06/2022
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: '2022-06-02',
  lang: 'xx'
}: 1`] = `
<mg-input-date lang="xx" value="2022-06-02">
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mg-input-title identifier="identifier" readonly="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <strong>
          6/2/2022
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  disabled: true,
  value: '2022-06-02',
  helpText: 'My help text'
}: 1`] = `
<mg-input-date value="2022-06-02">
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" disabled="" id="identifier" name="identifier" required="" type="date" value="2022-06-02">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  readonly: true,
  value: '2022-06-02',
  helpText: 'My help text'
}: 1`] = `
<mg-input-date value="2022-06-02">
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mg-input-title identifier="identifier" readonly="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <strong>
          6/2/2022
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  value: '2022-06-02',
  helpText: 'My help text'
}: 1`] = `
<mg-input-date value="2022-06-02">
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" required="" type="date" value="2022-06-02">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" type="date">
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message',
  labelOnTop: true
}: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date mg-c-input--label-on-top">
      <div class="mg-c-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
        <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
          <mg-icon icon="info-circle"></mg-icon>
        </mg-tooltip>
      </div>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args { label: 'label', identifier: 'identifier' }: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args { label: 'label', identifier: 'identifier', labelHide: true }: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title class="mg-u-visually-hidden" identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args { label: 'label', identifier: 'identifier', labelOnTop: true }: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date mg-c-input--label-on-top">
      <div class="mg-c-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
      </div>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args { label: 'label', identifier: 'identifier', readonly: true }: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mg-input-title identifier="identifier" readonly="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should trigger events 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date display error message with locale: fr 1`] = `
<mg-input-date lang="fr">
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input mg-c-input__input--has-error">
          <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" name="identifier" required="" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Format attendu&nbsp;:
          <span aria-hidden="true">
            mm/jj/aaaa
          </span>
          <span class="mg-u-visually-hidden">
            m m / j j / a a a a
          </span>
          (ex&nbsp;: 12/24/2023)
        </div>
        <div aria-live="assertive" class="mg-c-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date display error message with locale: xx 1`] = `
<mg-input-date lang="xx">
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input mg-c-input__input--has-error">
          <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" name="identifier" required="" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
        <div aria-live="assertive" class="mg-c-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date display error with displayError component's public method 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" required="" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date display error with displayError component's public method 2`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input mg-c-input__input--has-error">
          <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" name="identifier" required="" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
        <div aria-live="assertive" class="mg-c-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date should display override error with setError component's public method 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" required="" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date should display override error with setError component's public method 2`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" required="" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date should display override error with setError component's public method 3`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" name="identifier" required="" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date should display override error with setError component's public method 4`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input mg-c-input__input--has-error">
          <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" name="identifier" required="" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
        <div aria-live="assertive" class="mg-c-input__error" id="identifier-error">
          Override error
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case next state is disabled validity ({ validity: false, valueMissing: true, badInput: false }), valueMissing (%s), badInput (%s) 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input mg-c-input__input--has-error">
          <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" name="identifier" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
        <div aria-live="assertive" class="mg-c-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case next state is disabled validity ({ validity: false, valueMissing: true, badInput: false }), valueMissing (%s), badInput (%s) 2`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input">
          <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" disabled="" id="identifier" name="identifier" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case next state is readonly validity ({ validity: false, valueMissing: true, badInput: false }), valueMissing (%s), badInput (%s) 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <div class="mg-c-input__input mg-c-input__input--has-error">
          <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" name="identifier" type="date">
        </div>
        <div class="mg-c-input__help-text" id="identifier-help-text">
          Expected format:
          <span aria-hidden="true">
            mm/dd/yyyy
          </span>
          <span class="mg-u-visually-hidden">
            m m / d d / y y y y
          </span>
          (ex: 12/24/2023)
        </div>
        <div aria-live="assertive" class="mg-c-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case next state is readonly validity ({ validity: false, valueMissing: true, badInput: false }), valueMissing (%s), badInput (%s) 2`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mg-input-title identifier="identifier" readonly="">
        label
      </mg-input-title>
      <div class="mg-c-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;
